node module vergeten + alles is uitgelijnt
tot morgen voor wie dit leest XD

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -12,28 +12,34 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 
     <style type="text/css">
-        .ui.inverted.segment, .ui.primary.inverted.segment{
+        .ui.inverted.segment, .ui.primary.inverted.segment {
             background-color: #00AEEF;
         }
+
         .hidden.menu {
             display: none;
         }
+
         .masthead.segment {
             min-height: 700px;
             padding: 1em 0em;
         }
+
         .masthead .logo.item img {
             margin-right: 1em;
         }
+
         .masthead .ui.menu .ui.button {
             margin-left: 0.5em;
         }
+
         .masthead h1.ui.header {
             margin-top: 3em;
             margin-bottom: 0em;
             font-size: 4em;
             font-weight: normal;
         }
+
         .masthead h2 {
             font-size: 1.7em;
             font-weight: normal;
@@ -42,19 +48,24 @@
         .ui.vertical.stripe {
             padding: 8em 0em;
         }
+
         .ui.vertical.stripe h3 {
             font-size: 2em;
         }
+
         .ui.vertical.stripe .button + h3,
         .ui.vertical.stripe p + h3 {
             margin-top: 3em;
         }
+
         .ui.vertical.stripe .floated.image {
             clear: both;
         }
+
         .ui.vertical.stripe p {
             font-size: 1.33em;
         }
+
         .ui.vertical.stripe .horizontal.divider {
             margin: 3em 0em;
         }
@@ -62,6 +73,7 @@
         .quote.stripe.segment {
             padding: 0em;
         }
+
         .quote.stripe.segment .grid .column {
             padding-top: 5em;
             padding-bottom: 5em;
@@ -79,20 +91,25 @@
             .ui.fixed.menu {
                 display: none !important;
             }
+
             .secondary.pointing.menu .item,
             .secondary.pointing.menu .menu {
                 display: none;
             }
+
             .secondary.pointing.menu .toc.item {
                 display: block;
             }
+
             .masthead.segment {
                 min-height: 350px;
             }
+
             .masthead h1.ui.header {
                 font-size: 2em;
                 margin-top: 1.5em;
             }
+
             .masthead h2 {
                 margin-top: 0.5em;
                 font-size: 1.5em;
@@ -126,11 +143,12 @@
                     <h3 class="ui header" style="color: #00AEEF">Abouchen, Mourad</h3>
                 </div>
                 <div class="eight wide column" style="border-left: 1px solid #00AEEF">
-                    <p>My name is Mourad Abouhcen. I am 17 years old and i live in Amsterdam. 
-                    I study software engineering at de Hogeschool van Amsterdam and am now in my first year.
-                    I like programming because you can make things like programs and websites from nothing. 
-                    <br><br>
-                    I think our solution for traffic is a good solution and i can definitely see our idea grow in the future to something with even more functionalities.</p>
+                    <p>My name is Mourad Abouhcen. I am 17 years old and i live in Amsterdam.
+                        I study software engineering at de Hogeschool van Amsterdam and am now in my first year.
+                        I like programming because you can make things like programs and websites from nothing.
+                        <br><br>
+                        I think our solution for traffic is a good solution and i can definitely see our idea grow in
+                        the future to something with even more functionalities.</p>
                 </div>
             </div>
         </div>
@@ -140,7 +158,14 @@
         <div class="ui middle aligned stackable grid container">
             <div class="row">
                 <div class="eight wide column" style="border-right: 1px solid #00AEEF">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis</p>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                        Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet,
+                        consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+                        penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                        ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor
+                        sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+                        sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                        Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis</p>
                 </div>
                 <div class="six wide right floated column">
                     <h3 class="ui header" style="color: #00AEEF">Bunck, Raphael</h3>
@@ -156,7 +181,14 @@
                     <h3 class="ui header" style="color: #00AEEF">Klopper, Stijn</h3>
                 </div>
                 <div class="eight wide column" style="border-left: 1px solid #00AEEF">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis</p>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                        Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet,
+                        consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+                        penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                        ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis Lorem ipsum dolor
+                        sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+                        sociis natoque penatibus et magnis dis Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                        Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis</p>
                 </div>
             </div>
         </div>
@@ -166,9 +198,14 @@
         <div class="ui middle aligned stackable grid container">
             <div class="row">
                 <div class="eight wide column" style="border-right: 1px solid #00AEEF">
-                    <p>Mijn naam is Souhail Faiz, ik ben 20 jaar oud en ik kom uit Veenendaal. Ik volg de opleiding software engineer op de hva en ben super geinteresseerd in computer technieken. Als leergierige IT'er wil ik altijd het beste resultaat behalen en zal ik altijd me uiterste best geven om mijn doel te bereiken.</p>
-                    <p>Na het voltooien van verschillende projecten ben ik samen met dit team aan een nieuw product begonnen, genaamd: <strong>Pulse</strong>.</p>
-                    <p>Als jonge software engineer / co-owner van Pulse heb ik veel vertrouwen in dit project en verwacht ik aan het einde een uitstekende product die het markt op kan gaan.</p>
+                    <p>Mijn naam is Souhail Faiz, ik ben 20 jaar oud en ik kom uit Veenendaal. Ik volg de opleiding
+                        software engineer op de hva en ben super geinteresseerd in computer technieken. Als leergierige
+                        IT'er wil ik altijd het beste resultaat behalen en zal ik altijd me uiterste best geven om mijn
+                        doel te bereiken.</p>
+                    <p>Na het voltooien van verschillende projecten ben ik samen met dit team aan een nieuw product
+                        begonnen, genaamd: <strong>Pulse</strong>.</p>
+                    <p>Als jonge software engineer / co-owner van Pulse heb ik veel vertrouwen in dit project en
+                        verwacht ik aan het einde een uitstekende product die het markt op kan gaan.</p>
                 </div>
                 <div class="six wide right floated column">
                     <h3 class="ui header" style="color: #00AEEF">Faiz, Souhail</h3>
@@ -185,13 +222,16 @@
                 </div>
                 <div class="eight wide column" style="border-left: 1px solid #00AEEF">
                     <p>
-                    My name is Ziggy Veerman. I am 18 years old and study Software engineering at the university of applied science located in amsterdam.
+                        My name is Ziggy Veerman. I am 18 years old and study Software engineering at the university of
+                        applied science located in amsterdam.
                     </p>
                     <p>
-                    During the development of the Pulse system, I enjoyed watching the application grow. At it's current state, It has even more functions then we intended to build.
+                        During the development of the Pulse system, I enjoyed watching the application grow. At it's
+                        current state, It has even more functions then we intended to build.
                     </p>
                     <p>
-                    So I think we are looking at a bright future concerning Pulse. The system we are building is a great solution to the problem Planet encountered.
+                        So I think we are looking at a bright future concerning Pulse. The system we are building is a
+                        great solution to the problem Planet encountered.
                     </p>
                 </div>
             </div>
@@ -199,12 +239,12 @@
     </div>
 
 
-
     <div class="ui vertical stripe quote segment">
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
                 <div class="column" style="background-color: #00AEEF;">
-                    <p style="color: white;">Looking for support ? <a href="/support" style="color: white"><u>Click here.</u></a></p>
+                    <p style="color: white;">Looking for support ? <a href="/support" style="color: white"><u>Click
+                        here.</u></a></p>
                 </div>
             </div>
         </div>
@@ -214,7 +254,8 @@
         <div class="ui container">
             <div class="ui stackable inverted divided equal height stackable grid">
                 <div class="three wide column">
-                    <img src="/images/pulselogo.png" class="ui avatar image" style="width: 150px; height:150px; margin: -30px 0px 0px -100px">
+                    <img src="/images/pulselogo.png" class="ui avatar image"
+                         style="width: 150px; height:150px; margin: -30px 0px 0px -100px">
                 </div>
                 <div class="three wide column">
                     <div class="ui inverted link list" style="color: white;">
