--- a/views/learn.hbs
+++ b/views/learn.hbs
@@ -12,28 +12,34 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 
     <style type="text/css">
-        .ui.inverted.segment, .ui.primary.inverted.segment{
+        .ui.inverted.segment, .ui.primary.inverted.segment {
             background-color: #00AEEF;
         }
+
         .hidden.menu {
             display: none;
         }
+
         .masthead.segment {
             min-height: 700px;
             padding: 1em 0em;
         }
+
         .masthead .logo.item img {
             margin-right: 1em;
         }
+
         .masthead .ui.menu .ui.button {
             margin-left: 0.5em;
         }
+
         .masthead h1.ui.header {
             margin-top: 3em;
             margin-bottom: 0em;
             font-size: 4em;
             font-weight: normal;
         }
+
         .masthead h2 {
             font-size: 1.7em;
             font-weight: normal;
@@ -42,19 +48,24 @@
         .ui.vertical.stripe {
             padding: 8em 0em;
         }
+
         .ui.vertical.stripe h3 {
             font-size: 2em;
         }
+
         .ui.vertical.stripe .button + h3,
         .ui.vertical.stripe p + h3 {
             margin-top: 3em;
         }
+
         .ui.vertical.stripe .floated.image {
             clear: both;
         }
+
         .ui.vertical.stripe p {
             font-size: 1.33em;
         }
+
         .ui.vertical.stripe .horizontal.divider {
             margin: 3em 0em;
         }
@@ -62,6 +73,7 @@
         .quote.stripe.segment {
             padding: 0em;
         }
+
         .quote.stripe.segment .grid .column {
             padding-top: 5em;
             padding-bottom: 5em;
@@ -79,20 +91,25 @@
             .ui.fixed.menu {
                 display: none !important;
             }
+
             .secondary.pointing.menu .item,
             .secondary.pointing.menu .menu {
                 display: none;
             }
+
             .secondary.pointing.menu .toc.item {
                 display: block;
             }
+
             .masthead.segment {
                 min-height: 350px;
             }
+
             .masthead h1.ui.header {
                 font-size: 2em;
                 margin-top: 1.5em;
             }
+
             .masthead h2 {
                 margin-top: 0.5em;
                 font-size: 1.5em;
@@ -112,81 +129,82 @@
     <div class="ui vertical stripe quote segment">
         <div class="ui equal width stackable internally celled grid">
             <div class="row">
-                <div class="column" align = "center">
+                <div class="column" align="center">
                     <h3 style="color: black;">Learn about and help us</h3>
-            </div>
-        </div>
-    </div>
-
-    <div class="ui vertical stripe quote segment">
-        <div class="ui equal width stackable internally celled grid">
-            <div class="center aligned row">
-
-                <div class="column" style="background-color: white;">
-                    <a href="https://github.com/PLA24">
-                        <h3 style="color: white;"></h3>
-                        <p style="color: #363945;"></p>
-                    </a>
-                </div>
-                <div class="column" style="background-color: #00AEEF;">
-                    <a href="https://trello.com/b/o7aDbwqp/rd">
-                      <i class="massive trello icon"></i>
-                        <h3 style="color: white;">Trello.</h3>
-                        <p style="color: #363945;">Click here to see our Trello cards for future product changes</p></a>
-                </div>
-                <div class="column" style="background-color: white;">
-                    <a href="https://github.com/PLA24">
-                        <h3 style="color: white;"></h3>
-                        <p style="color: #363945;"></p>
-                    </a>
-                </div>
-                <div class="column" style="background-color: #00AEEF;">
-                    <a href="https://github.com/PLA24">
-                    <i class="massive github icon"></i>
-                    <h3 style="color: white;">Github.</h3>
-                    <p style="color: #363945;">Click here to see our code</p>
-                    </a>
                 </div>
             </div>
         </div>
-    </div>
 
+        <div class="ui vertical stripe quote segment">
+            <div class="ui equal width stackable internally celled grid">
+                <div class="center aligned row">
 
-
-    <div class="ui vertical stripe quote segment">
-        <div class="ui equal width stackable internally celled grid">
-            <div class="center aligned row">
-
-                <div class="column" style="background-color: #00AEEF;">
-                    <a href="https://github.com/PLA24/Blog/tree/master/source/_posts">
-                        <i class="massive blogger icon"></i>
-                        <h3 style="color: white;">Blog.</h3>
-                        <p style="color: #363945;">Click here to see our weekly blog with new posts about new features/updates!</p>
-                    </a>
-                </div>
-                <div class="column" style="background-color: white;">
-                    <a href="https://github.com/PLA24">
-                        <h3 style="color: white;"></h3>
-                        <p style="color: #363945;"></p>
-                    </a>
-                </div>
-                <div class="column" style="background-color: #00AEEF;">
-                    <a href="https://www.gofundme.com">
-                      <i class="massive bitcoin icon"></i>
-                        <h3 style="color: white;">Donate.</h3>
-                        <p style="color: #363945;">Donations help support this project but are NOT required or even expected.</p></a>
-                </div>
-                <div class="column" style="background-color: white;">
-                    <a href="https://github.com/PLA24">
-                        <h3 style="color: white;"></h3>
-                        <p style="color: #363945;"></p>
-                    </a>
+                    <div class="column" style="background-color: white;">
+                        <a href="https://github.com/PLA24">
+                            <h3 style="color: white;"></h3>
+                            <p style="color: #363945;"></p>
+                        </a>
+                    </div>
+                    <div class="column" style="background-color: #00AEEF;">
+                        <a href="https://trello.com/b/o7aDbwqp/rd">
+                            <i class="massive trello icon"></i>
+                            <h3 style="color: white;">Trello.</h3>
+                            <p style="color: #363945;">Click here to see our Trello cards for future product changes</p>
+                        </a>
+                    </div>
+                    <div class="column" style="background-color: white;">
+                        <a href="https://github.com/PLA24">
+                            <h3 style="color: white;"></h3>
+                            <p style="color: #363945;"></p>
+                        </a>
+                    </div>
+                    <div class="column" style="background-color: #00AEEF;">
+                        <a href="https://github.com/PLA24">
+                            <i class="massive github icon"></i>
+                            <h3 style="color: white;">Github.</h3>
+                            <p style="color: #363945;">Click here to see our code</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
+        <div class="ui vertical stripe quote segment">
+            <div class="ui equal width stackable internally celled grid">
+                <div class="center aligned row">
 
-</body>
+                    <div class="column" style="background-color: #00AEEF;">
+                        <a href="https://github.com/PLA24/Blog/tree/master/source/_posts">
+                            <i class="massive blogger icon"></i>
+                            <h3 style="color: white;">Blog.</h3>
+                            <p style="color: #363945;">Click here to see our weekly blog with new posts about new
+                                features/updates!</p>
+                        </a>
+                    </div>
+                    <div class="column" style="background-color: white;">
+                        <a href="https://github.com/PLA24">
+                            <h3 style="color: white;"></h3>
+                            <p style="color: #363945;"></p>
+                        </a>
+                    </div>
+                    <div class="column" style="background-color: #00AEEF;">
+                        <a href="https://www.gofundme.com">
+                            <i class="massive bitcoin icon"></i>
+                            <h3 style="color: white;">Donate.</h3>
+                            <p style="color: #363945;">Donations help support this project but are NOT required or even
+                                expected.</p></a>
+                    </div>
+                    <div class="column" style="background-color: white;">
+                        <a href="https://github.com/PLA24">
+                            <h3 style="color: white;"></h3>
+                            <p style="color: #363945;"></p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        </body>
 </html>
