--- a/views/support.hbs
+++ b/views/support.hbs
@@ -12,28 +12,34 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 
     <style type="text/css">
-        .ui.inverted.segment, .ui.primary.inverted.segment{
+        .ui.inverted.segment, .ui.primary.inverted.segment {
             background-color: #00AEEF;
         }
+
         .hidden.menu {
             display: none;
         }
+
         .masthead.segment {
             min-height: 700px;
             padding: 1em 0em;
         }
+
         .masthead .logo.item img {
             margin-right: 1em;
         }
+
         .masthead .ui.menu .ui.button {
             margin-left: 0.5em;
         }
+
         .masthead h1.ui.header {
             margin-top: 3em;
             margin-bottom: 0em;
             font-size: 4em;
             font-weight: normal;
         }
+
         .masthead h2 {
             font-size: 1.7em;
             font-weight: normal;
@@ -42,19 +48,24 @@
         .ui.vertical.stripe {
             padding: 8em 0em;
         }
+
         .ui.vertical.stripe h3 {
             font-size: 2em;
         }
+
         .ui.vertical.stripe .button + h3,
         .ui.vertical.stripe p + h3 {
             margin-top: 3em;
         }
+
         .ui.vertical.stripe .floated.image {
             clear: both;
         }
+
         .ui.vertical.stripe p {
             font-size: 1.33em;
         }
+
         .ui.vertical.stripe .horizontal.divider {
             margin: 3em 0em;
         }
@@ -62,6 +73,7 @@
         .quote.stripe.segment {
             padding: 0em;
         }
+
         .quote.stripe.segment .grid .column {
             padding-top: 5em;
             padding-bottom: 5em;
@@ -79,20 +91,25 @@
             .ui.fixed.menu {
                 display: none !important;
             }
+
             .secondary.pointing.menu .item,
             .secondary.pointing.menu .menu {
                 display: none;
             }
+
             .secondary.pointing.menu .toc.item {
                 display: block;
             }
+
             .masthead.segment {
                 min-height: 350px;
             }
+
             .masthead h1.ui.header {
                 font-size: 2em;
                 margin-top: 1.5em;
             }
+
             .masthead h2 {
                 margin-top: 0.5em;
                 font-size: 1.5em;
@@ -123,7 +140,7 @@
     <div class="ui vertical stripe quote segment">
         <div class="ui equal width stackable internally celled grid">
             <div class=" row">
-                <div class="column" style="background-color: white; text-align: center" id="customColumn" >
+                <div class="column" style="background-color: white; text-align: center" id="customColumn">
                     <h3 style="color: #00AEEF;">FAQ</h3>
                     <div class="ui grid">
                         <div class="four wide column">
@@ -148,27 +165,27 @@
                 </div>
                 <div class="column" style="background-color: white;" id="customColumn">
                     <h3 style="color: #00AEEF; text-align: center">Ask A Question</h3>
-                        <form class="ui form">
-                            <div class="field">
-                                <label>First Name</label>
-                                <input type="text" name="first-name" placeholder="First Name">
+                    <form class="ui form">
+                        <div class="field">
+                            <label>First Name</label>
+                            <input type="text" name="first-name" placeholder="First Name">
+                        </div>
+                        <div class="field">
+                            <label>Last Name</label>
+                            <input type="text" name="last-name" placeholder="Last Name">
+                        </div>
+                        <div class="field">
+                            <label>Text</label>
+                            <textarea></textarea>
+                        </div>
+                        <div class="field">
+                            <div class="ui checkbox">
+                                <input type="checkbox" tabindex="0" class="hidden">
+                                <label>I have not found an answer in the FAQ or manual</label>
                             </div>
-                            <div class="field">
-                                <label>Last Name</label>
-                                <input type="text" name="last-name" placeholder="Last Name">
-                            </div>
-                            <div class="field">
-                                <label>Text</label>
-                                <textarea></textarea>
-                            </div>
-                            <div class="field">
-                                <div class="ui checkbox">
-                                    <input type="checkbox" tabindex="0" class="hidden">
-                                    <label>I have not found an answer in the FAQ or manual</label>
-                                </div>
-                            </div>
-                            <button class="ui button" type="submit">Submit</button>
-                        </form>
+                        </div>
+                        <button class="ui button" type="submit">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -178,7 +195,8 @@
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
                 <div class="column" style="background-color: #00AEEF;">
-                    <p style="color: white;"><a href="/learn" style="color: white"><strong><u>Click here to download the user manual</u></strong></a></p>
+                    <p style="color: white;"><a href="/learn" style="color: white"><strong><u>Click here to download the
+                        user manual</u></strong></a></p>
                 </div>
             </div>
         </div>
@@ -188,7 +206,8 @@
         <div class="ui container">
             <div class="ui stackable inverted divided equal height stackable grid">
                 <div class="three wide column">
-                    <img src="/images/pulselogo.png" class="ui avatar image" style="width: 150px; height:150px; margin: -30px 0px 0px -100px">
+                    <img src="/images/pulselogo.png" class="ui avatar image"
+                         style="width: 150px; height:150px; margin: -30px 0px 0px -100px">
                 </div>
                 <div class="three wide column">
                     <div class="ui inverted link list" style="color: white;">
