--- a/views/solution.hbs
+++ b/views/solution.hbs
@@ -2,245 +2,250 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
-  <title>{{title}}</title>
-  <link rel='stylesheet' href='/stylesheets/homepage.css' />
-  <link rel="stylesheet" href="/semantic/dist/semantic.css" />
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+    <title>{{title}}</title>
+    <link rel='stylesheet' href='/stylesheets/homepage.css'/>
+    <link rel="stylesheet" href="/semantic/dist/semantic.css"/>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 </head>
 
 <head>
-  <!-- Standard Meta -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <!-- Standard Meta -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <!-- Site Properties -->
-  <title>Homepage - Semantic</title>
-  <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/site.css">
+    <!-- Site Properties -->
+    <title>Homepage - Semantic</title>
+    <link rel="stylesheet" type="text/css" href="../dist/components/reset.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/site.css">
 
-  <link rel="stylesheet" type="text/css" href="../dist/components/container.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/grid.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/header.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/image.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/menu.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/container.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/grid.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/header.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/image.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/menu.css">
 
-  <link rel="stylesheet" type="text/css" href="../dist/components/divider.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/dropdown.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/segment.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/button.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/list.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/icon.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/sidebar.css">
-  <link rel="stylesheet" type="text/css" href="../dist/components/transition.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/divider.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/dropdown.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/segment.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/button.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/list.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/icon.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="../dist/components/transition.css">
 
-  <style type="text/css">
-    .ui.inverted.segment,
-    .ui.primary.inverted.segment {
-      background-color: #00AEEF;
-    }
+    <style type="text/css">
+        .ui.inverted.segment,
+        .ui.primary.inverted.segment {
+            background-color: #00AEEF;
+        }
 
-    .hidden.menu {
-      display: none;
-    }
+        .hidden.menu {
+            display: none;
+        }
 
-    .masthead.segment {
-      min-height: 700px;
-      padding: 1em 0em;
-    }
+        .masthead.segment {
+            min-height: 700px;
+            padding: 1em 0em;
+        }
 
-    .masthead .logo.item img {
-      margin-right: 1em;
-    }
+        .masthead .logo.item img {
+            margin-right: 1em;
+        }
 
-    .masthead .ui.menu .ui.button {
-      margin-left: 0.5em;
-    }
+        .masthead .ui.menu .ui.button {
+            margin-left: 0.5em;
+        }
 
-    .masthead h1.ui.header {
-      margin-top: 3em;
-      margin-bottom: 0em;
-      font-size: 4em;
-      font-weight: normal;
-    }
+        .masthead h1.ui.header {
+            margin-top: 3em;
+            margin-bottom: 0em;
+            font-size: 4em;
+            font-weight: normal;
+        }
 
-    .masthead h2 {
-      font-size: 1.7em;
-      font-weight: normal;
-    }
+        .masthead h2 {
+            font-size: 1.7em;
+            font-weight: normal;
+        }
 
-    .ui.vertical.stripe {
-      padding: 8em 0em;
-    }
+        .ui.vertical.stripe {
+            padding: 8em 0em;
+        }
 
-    .ui.vertical.stripe h3 {
-      font-size: 2em;
-    }
+        .ui.vertical.stripe h3 {
+            font-size: 2em;
+        }
 
-    .ui.vertical.stripe .button+h3,
-    .ui.vertical.stripe p+h3 {
-      margin-top: 3em;
-    }
+        .ui.vertical.stripe .button + h3,
+        .ui.vertical.stripe p + h3 {
+            margin-top: 3em;
+        }
 
-    .ui.vertical.stripe .floated.image {
-      clear: both;
-    }
+        .ui.vertical.stripe .floated.image {
+            clear: both;
+        }
 
-    .ui.vertical.stripe p {
-      font-size: 1.33em;
-    }
+        .ui.vertical.stripe p {
+            font-size: 1.33em;
+        }
 
-    .ui.vertical.stripe .horizontal.divider {
-      margin: 3em 0em;
-    }
+        .ui.vertical.stripe .horizontal.divider {
+            margin: 3em 0em;
+        }
 
-    .quote.stripe.segment {
-      padding: 0em;
-    }
+        .quote.stripe.segment {
+            padding: 0em;
+        }
 
-    .quote.stripe.segment .grid .column {
-      padding-top: 5em;
-      padding-bottom: 5em;
-    }
+        .quote.stripe.segment .grid .column {
+            padding-top: 5em;
+            padding-bottom: 5em;
+        }
 
-    .footer.segment {
-      padding: 5em 0em;
-    }
+        .footer.segment {
+            padding: 5em 0em;
+        }
 
-    .secondary.pointing.menu .toc.item {
-      display: none;
-    }
+        .secondary.pointing.menu .toc.item {
+            display: none;
+        }
 
-    @media only screen and (max-width: 700px) {
-      .ui.fixed.menu {
-        display: none !important;
-      }
-      .secondary.pointing.menu .item,
-      .secondary.pointing.menu .menu {
-        display: none;
-      }
-      .secondary.pointing.menu .toc.item {
-        display: block;
-      }
-      .masthead.segment {
-        min-height: 350px;
-      }
-      .masthead h1.ui.header {
-        font-size: 2em;
-        margin-top: 1.5em;
-      }
-      .masthead h2 {
-        margin-top: 0.5em;
-        font-size: 1.5em;
-      }
-    }
-  </style>
-  <script src="assets/library/jquery.min.js"></script>
-  <script src="../dist/components/visibility.js"></script>
-  <script src="../dist/components/sidebar.js"></script>
-  <script src="../dist/components/transition.js"></script>
+        @media only screen and (max-width: 700px) {
+            .ui.fixed.menu {
+                display: none !important;
+            }
+
+            .secondary.pointing.menu .item,
+            .secondary.pointing.menu .menu {
+                display: none;
+            }
+
+            .secondary.pointing.menu .toc.item {
+                display: block;
+            }
+
+            .masthead.segment {
+                min-height: 350px;
+            }
+
+            .masthead h1.ui.header {
+                font-size: 2em;
+                margin-top: 1.5em;
+            }
+
+            .masthead h2 {
+                margin-top: 0.5em;
+                font-size: 1.5em;
+            }
+        }
+    </style>
+    <script src="assets/library/jquery.min.js"></script>
+    <script src="../dist/components/visibility.js"></script>
+    <script src="../dist/components/sidebar.js"></script>
+    <script src="../dist/components/transition.js"></script>
 </head>
 
 <!-- Page Contents -->
 <div class="pusher">
-  <div class="ui vertical stripe quote segment">
-    <div class="ui equal width stackable internally celled grid">
-      <div class="center aligned row">
-        <div class="column" style="background-color: #00AEEF;">
-          <h3 style="color: white;">Solution.</h3>
+    <div class="ui vertical stripe quote segment">
+        <div class="ui equal width stackable internally celled grid">
+            <div class="center aligned row">
+                <div class="column" style="background-color: #00AEEF;">
+                    <h3 style="color: white;">Solution.</h3>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
-  <div class="ui vertical stripe segment">
-    <div class="ui middle aligned stackable grid container">
-      <div class="row">
-        <div class="eight wide column" style="border-right: 1px solid #00AEEF">
-          <h3 class="ui header" style="color: #00AEEF">Problem</h3>
-          <p>Almost every person is a part of traffic in the Netherlands. 
-            A lot of these people go very often by car. 
-            And despite the good infrastructure, 
-            a lot of problems still take place which have negative consequences on traffic.</p><br>
-          <p>For instance:
-            <li>Car accidents</li>
-            <li>Traffic jams</li>
-            <li>Bad road structure</li>
-            <li>Bad climate</li>
-            <li>CO2-emissions</li>
-            <br><br>
-            <p>All of the problems above take place almost daily and
-              that is why it's useful to monitor it all. 
-              This way we can keep track and combat problems before they grow too big.
-            </p>
-            
-        </div>
-        <div class="six wide right floated column">
-        </div>
-      </div>
-    </div>
-  </div>
+    <div class="ui vertical stripe segment">
+        <div class="ui middle aligned stackable grid container">
+            <div class="row">
+                <div class="eight wide column" style="border-right: 1px solid #00AEEF">
+                    <h3 class="ui header" style="color: #00AEEF">Problem</h3>
+                    <p>Almost every person is a part of traffic in the Netherlands.
+                        A lot of these people go very often by car.
+                        And despite the good infrastructure,
+                        a lot of problems still take place which have negative consequences on traffic.</p><br>
+                    <p>For instance:
+                    <li>Car accidents</li>
+                    <li>Traffic jams</li>
+                    <li>Bad road structure</li>
+                    <li>Bad climate</li>
+                    <li>CO2-emissions</li>
+                    <br><br>
+                    <p>All of the problems above take place almost daily and
+                        that is why it's useful to monitor it all.
+                        This way we can keep track and combat problems before they grow too big.
+                    </p>
 
-  <div class="ui vertical stripe segment">
-    <div class="ui middle aligned stackable grid container">
-      <div class="row">
-        <div class="six wide right floated column">
+                </div>
+                <div class="six wide right floated column">
+                </div>
+            </div>
         </div>
-        <div class="eight wide column" style="border-left: 1px solid #00AEEF">
-          <h3 class="ui header" style="color: #00AEEF">Solution</h3>
-          <p>Our solution to the many problems of traffic is Pulse. 
-            Pulse is a traffic monitoring system. 
-            We scan all kinds of vehicles through out the day on all the intersections in the Netherlands.
-            <br><br>
-            By scanning the license plates we can make out a lot of patterns in traffic.
-            For instance, you see the amount of cars counted dropping when it is raining, 
-            but the amount of counted trucks stay the same.
-            <br>
-            You can find these patterns on our dashboard which is also our statistics page.
-          </p>
-        </div>
-      </div>
     </div>
-  </div>
 
-  <div class="ui vertical stripe quote segment">
-    <div class="ui equal width stackable internally celled grid">
-      <div class="center aligned row">
-        <div class="column" style="background-color: #00AEEF;">
-          <p style="color: white;">Want to know more about us? <a href="/about" style="color: white"><u>Click here.</u></a></p>
+    <div class="ui vertical stripe segment">
+        <div class="ui middle aligned stackable grid container">
+            <div class="row">
+                <div class="six wide right floated column">
+                </div>
+                <div class="eight wide column" style="border-left: 1px solid #00AEEF">
+                    <h3 class="ui header" style="color: #00AEEF">Solution</h3>
+                    <p>Our solution to the many problems of traffic is Pulse.
+                        Pulse is a traffic monitoring system.
+                        We scan all kinds of vehicles through out the day on all the intersections in the Netherlands.
+                        <br><br>
+                        By scanning the license plates we can make out a lot of patterns in traffic.
+                        For instance, you see the amount of cars counted dropping when it is raining,
+                        but the amount of counted trucks stay the same.
+                        <br>
+                        You can find these patterns on our dashboard which is also our statistics page.
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 
-  <div class="ui inverted vertical footer segment" style="background-color: #2185d0;">
-    <div class="ui container">
-      <div class="ui stackable inverted divided equal height stackable grid">
-        <div class="three wide column">
-          <img src="/images/pulselogo.png" class="ui avatar image" style="width: 150px; height:150px; margin: -30px 0px 0px -100px">
+    <div class="ui vertical stripe quote segment">
+        <div class="ui equal width stackable internally celled grid">
+            <div class="center aligned row">
+                <div class="column" style="background-color: #00AEEF;">
+                    <p style="color: white;">Want to know more about us? <a href="/about" style="color: white"><u>Click
+                        here.</u></a></p>
+                </div>
+            </div>
         </div>
-        <div class="three wide column">
-          <div class="ui inverted link list" style="color: white;">
-            <a href="/" class="item">Product</a>
-            <a href="/solution" class="item">Idea</a>
-            <a href="/learn" class="item">Learn</a>
-          </div>
-        </div>
-        <div class="three wide column">
-          <div class="ui inverted link list">
-            <a href="/about" class="item">About</a>
-            <a href="/support" class="item">Support</a>
-            <a href="/pricing" class="item">Pricing</a>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
+
+    <div class="ui inverted vertical footer segment" style="background-color: #2185d0;">
+        <div class="ui container">
+            <div class="ui stackable inverted divided equal height stackable grid">
+                <div class="three wide column">
+                    <img src="/images/pulselogo.png" class="ui avatar image"
+                         style="width: 150px; height:150px; margin: -30px 0px 0px -100px">
+                </div>
+                <div class="three wide column">
+                    <div class="ui inverted link list" style="color: white;">
+                        <a href="/" class="item">Product</a>
+                        <a href="/solution" class="item">Idea</a>
+                        <a href="/learn" class="item">Learn</a>
+                    </div>
+                </div>
+                <div class="three wide column">
+                    <div class="ui inverted link list">
+                        <a href="/about" class="item">About</a>
+                        <a href="/support" class="item">Support</a>
+                        <a href="/pricing" class="item">Pricing</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-
 
 
 </body>
